--- a/actions/gcp/auth/action.yml
+++ b/actions/gcp/auth/action.yml
@@ -3,20 +3,12 @@ description: 'Authenticates with Google Cloud Platform using Workload Identity F
 
 inputs:
   service_name:
-    description: 'Name of the service (used to construct service account email e.g. "image-processor-fn")'
+    description: 'Name of the service (used to construct service account email)'
     required: true
   environment:
     description: 'Environment to deploy to (dev/staging/prod)'
     required: false
-    default: 'dev'
-
-outputs:
-  project_id:
-    description: 'The GCP project ID for the selected environment'
-    value: ${{ steps.set_env.outputs.project_id }}
-  environment:
-    description: 'The selected environment'
-    value: ${{ steps.set_env.outputs.env }}
+    default: ''
 
 runs:
   using: "composite"
@@ -24,18 +16,21 @@ runs:
     - name: Set environment variables
       id: set_env
       shell: bash
-      run: |
-        # Source the script to set environment variables
-        source ${{ github.action_path }}/scripts/set-environment.sh
+      env:
+        INPUT_ENVIRONMENT: ${{ inputs.environment }}
+        PROD_GCP_PROJECT_ID: ${{ vars.PROD_GCP_PROJECT_ID }}
+        STAGING_GCP_PROJECT_ID: ${{ vars.STAGING_GCP_PROJECT_ID }}
+        DEV_GCP_PROJECT_ID: ${{ vars.DEV_GCP_PROJECT_ID }}
+      run: ${{ github.action_path }}/scripts/set-environment.sh
 
     - name: Authenticate to Google Cloud
       uses: google-github-actions/auth@v2
       with:
-        workload_identity_provider: ${{ env.WORKLOAD_IDENTITY_PROVIDER }}
+        workload_identity_provider: ${{ vars.WORKLOAD_IDENTITY_PROVIDER }}
         service_account: "${{ inputs.service_name }}-github@${{ env.PROJECT_ID }}.iam.gserviceaccount.com"
         create_credentials_file: true
         token_format: "access_token"
-        audience: "//iam.googleapis.com/${{ env.WORKLOAD_IDENTITY_PROVIDER }}"
+        audience: "//iam.googleapis.com/${{ vars.WORKLOAD_IDENTITY_PROVIDER }}"
 
     - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@v2
