--- a/actions/gcp/secrets/action.yml
+++ b/actions/gcp/secrets/action.yml
@@ -2,8 +2,14 @@ name: 'GCP Secrets'
 description: 'Fetches secrets from GCP Secret Manager'
 
 inputs:
+  service_name:
+    description: 'Service name (e.g. "fetch-data-fn")'
+    required: true
   secrets:
-    description: 'JSON array of secret names'
+    description: 'JSON array of secret names (e.g. ["DATA_API_KEY", "DATA_API_URL"])'
+    required: true
+  secrets_outputs:
+    description: 'JSON array of secret outputs (e.g. ["DATA_API_KEY", "DATA_API_URL"])'
     required: true
 
 runs:
@@ -13,7 +19,13 @@ runs:
       shell: bash
       run: |
         secrets='${{ inputs.secrets }}'
-        for secret in $(echo "$secrets" | jq -r '.[]'); do
+        secrets_outputs='${{ inputs.secrets_outputs }}'
+        readarray -t secret_array < <(echo "$secrets" | jq -r '.[]')
+        readarray -t output_array < <(echo "$secrets_outputs" | jq -r '.[]')
+        
+        for i in "${!secret_array[@]}"; do
+          secret="${secret_array[$i]}"
+          output_name="${output_array[$i]}"
           value=$(gcloud secrets versions access latest --secret=$secret)
-          echo "${secret^^}_NAME=${value}" >> "$GITHUB_ENV"
+          echo "${output_name}=${value}" >> "$GITHUB_ENV"
         done
