Remove required service_name field from secrets script

--- a/actions/gcp/secrets/action.yml
+++ b/actions/gcp/secrets/action.yml
@@ -2,11 +2,8 @@ name: 'GCP Secrets'
 description: 'Fetches secrets from GCP Secret Manager'
 
 inputs:
-  service_name:
-    description: 'Service name (e.g. "fetch-data-fn")'
-    required: true
   secrets:
-    description: 'JSON array of secret names (e.g. ["DATA_API_KEY", "DATA_API_URL"])'
+    description: 'JSON array of secret names (e.g. ["data-api-key-fn", "data-api-url-fn"])'
     required: true
   secrets_outputs:
     description: 'JSON array of secret outputs (e.g. ["DATA_API_KEY", "DATA_API_URL"])'
